--- a/#src/easy.html
+++ b/#src/easy.html
@@ -21,7 +21,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(2a - 4)x = 3a + 1$$</p>
           </div>
@@ -53,6 +53,7 @@
               $$x = \frac{3a + 1}{2a - 4}$$
               <p>$$Ответ: при \: a = 2 , x = \in \varnothing $$</p>
             </p>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
           </div>
         </div>
       </article>
@@ -60,7 +61,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#ЛинейныеУравнения">Линейные уравнения</a></small>
             <p class="task__text">Решите уравнение при всех значениях параметра а:</p>
             <p class="task__formula">$$(a^2 - 2a + 1)x = a^2 + 2a - 3$$</p>
           </div>
@@ -115,6 +116,7 @@
               $$Ответ: если \: a = 1, то \: x \in R;$$
               $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
             </p>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
           </div>
         </div>
       </article>
@@ -122,7 +124,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="theoreticalMaterial.html#ИсследованиеДискриминанта">Исследование дискриминанта</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#ИсследованиеДискриминанта">Исследование дискриминанта</a></small>
             <p class="task__text">При каких значениях параметра а уравнение 2 различных решения?</p>
             <p class="task__formula">$$ x^2 -ax + 16 = 0 $$</p>
           </div>
@@ -161,6 +163,7 @@
               <p>Ответ:  уравнение умеет  2  корня   при</p>
               $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
             </p>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">истоник</a>
           </div>
         </div>
       </article>
