--- a/#src/theoreticalMaterial.html
+++ b/#src/theoreticalMaterial.html
@@ -24,7 +24,7 @@
           <!-- <h2>лёгкие</h2> -->
           <h3 id="ЛинейныеУравнения">Линейные уравнения</h3>
           <p>Линейные уравнения, неравенства и системы линейных уравнений относятся к числу самых простых задач с параметрами. Поэтому задачи этого раздела являются подготовительными заданиями к решению реальных задач с параметрами, предлагаемых на ЕГЭ.</p>
-          <a href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
+          <a class="source"href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
         </article>
         <article class="theoretical__item">
           <h3 id="ИсследованиеДискриминанта" >Исследование дискриминанта</h3>
@@ -58,7 +58,7 @@
               <p><strong>Факт 2:</strong>Для того чтобы корни квадратного трехчлена имели разные
                 знаки, необходимо и достаточно выполнения соотношения </p>
                 $$ x_1 * x_2 = \frac{c}{a} < 0;$$
-              <a href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
+              <a class="source"href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
         </article>
         <article class="theoretical__item">
           <!-- <h2>средние</h2> -->
@@ -71,7 +71,7 @@
           <p> <strong>Утверждение 2. </strong> Если функция  возрастает, а функция монотонна возрастает, а функция  \( y = g(x) \) монотонно убывает, то уравнение  \( f(x)= g(x) \) имеет не более одного корня.</p>
           <p>С помощью утверждений 1 и 2 можно обосновать единственность решения уравнения в тех случаях, когда решить его стандартными способами не представляется возможным, но при этом удается подобрать корень уравнения, который, как правило, является целым числом. При этом надо учитывать, что решение уравнения «методом подбора» не будет засчитано при проверке без обоснования того, что уравнение не имеет других корней. Такое обоснование часто удается сделать, опираясь на свойства монотонности функций.</p>
 
-          <a href="https://math100.ru/prof-ege_2022_17-6/">источник</a>
+          <a class="source"href="https://math100.ru/prof-ege_2022_17-6/">источник</a>
         </article>
         <article class="theoretical__item">
           <!-- <h2>сложные</h2> -->
@@ -91,7 +91,7 @@
           <figcaption>$$y = x(x - 1)$$</figcaption>
           <p>Глядя на график, выписываем ответ: при a < -0.25 решений нет, при a = -0.25 уравнение имеет единственное решение;
             при a > -0.25 уравнение имеет два решения.</p>
-          <a href="https://interneturok.ru/lesson/algebra/11-klass/uravneniya-i-neravenstva-sistemy-uravneniy-i-neravenstv/graficheskiy-metod-v-zadachah-s-parametrom-prodolzhenie-resheniya-zadach">источник</a>
+          <a class="source"href="https://interneturok.ru/lesson/algebra/11-klass/uravneniya-i-neravenstva-sistemy-uravneniy-i-neravenstv/graficheskiy-metod-v-zadachah-s-parametrom-prodolzhenie-resheniya-zadach">источник</a>
         </article>
         <article class="theoretical__item">
           <h3  id="Модуль" >Модуль</h3>
@@ -144,7 +144,7 @@
               $$ 4 - 4a - 20 \leq 0; $$
               $$ a \geq 0; $$
               <p>Ответ:  \( [-4; 2] \) </p>
-          <a href="https://alexlarin.net/param/p32.html">источник</a>
+          <a class="source"href="https://alexlarin.net/param/p32.html">источник</a>
         </article>
       </div>
     </section>
