--- a/#src/hard.html
+++ b/#src/hard.html
@@ -24,7 +24,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 1</h2>
-            <small><a href="theoreticalMaterial.html#Модуль">модуль</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#Модуль">модуль</a></small>
             <p class="task__text">Найдите все значения параметра a, при каждом из которых уравнение имеет корни, но ни один из них не принадлежит интервалу (4; 19).</p>
             <p class="task__formula">$$ | x - a^2 + a + 2 | + | x - a^2 + 3a - 1 | = 2a - 3$$</p>
           </div>
@@ -119,7 +119,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 2</h2>
-            <small><a href="theoreticalMaterial.html#Модуль">модуль</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#Модуль">модуль</a></small>
             <p class="task__text">Найдите все значения a, при каждом из которых уравнение на промежутке \( (-1; +\infty) \) имеет больше двух корней.</p>
             <p class="task__formula">$$ \left| \frac{5}{x-1} - 3 \right| = ax + a - 2 $$</p>
           </div>
@@ -162,7 +162,7 @@
         <div class="task__container">
           <div class="task__item">
             <h2>Задание 3</h2>
-            <small><a href="theoreticalMaterial.html#ГрафическийМетод">грифический метод</a></small>
+            <small><a class="source"href="theoreticalMaterial.html#ГрафическийМетод">грифический метод</a></small>
             <p class="task__text">При каких a уравнение имеет ровно три корня?</p>
             <p class="task__formula">$$ | x^2 - 2x - 3 | -2a = | x - a | - 1 $$</p>
           </div>
