delet this commit

--- a/#src/index.html
+++ b/#src/index.html
@@ -14,7 +14,7 @@
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
  </head>
-  <body id="body">
+  <body id="body" id="element" >
     @@include('blockNavAndLoader.html')
   <main>
     <div class="container">
