--- a/#src/easy.html
+++ b/#src/easy.html
@@ -53,7 +53,7 @@
               $$x = \frac{3a + 1}{2a - 4}$$
               <p>$$Ответ: при \: a = 2 , x = \in \varnothing $$</p>
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
       </article>
@@ -116,7 +116,7 @@
               $$Ответ: если \: a = 1, то \: x \in R;$$
               $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
       </article>
@@ -163,7 +163,7 @@
               <p>Ответ:  уравнение умеет  2  корня   при</p>
               $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
           </div>
         </div>
       </article>
