--- a/#src/hard.html
+++ b/#src/hard.html
@@ -112,6 +112,7 @@
               $$
               <p>Ответ: \( a \in  [1, 5; 3] \cup [6; + \infty] \)</p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=507587">источник</a>
           </div>
         </div>
       </article>
@@ -155,6 +156,7 @@
               <p>- 3 корня при \( \frac{6}{5} < a < \frac{5}{4} \) </p>
               <p>Ответ: \( \frac{6}{5} < a < \frac{5}{4} \))  </p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=501070" >источник</a>
           </div>
         </div>
       </article>
@@ -194,6 +196,7 @@
               $$ D = 3^2 - 4(3a - 4) = 25 - 12a = 0 \Leftrightarrow a = \frac{25}{12}$$
               <p>Ответ: \( a = 0, a = \frac{25}{12}\) </p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=485982" >источник</a>
           </div>
         </div>
       </article>
