--- a/#src/easy.html
+++ b/#src/easy.html
@@ -14,7 +14,7 @@
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
   </head>
-  <body id="body">
+  <body id="body" class="lock">
     @@include('blockNavAndLoader.html')
     <section class="content" >
       <article class="task">
