--- a/#src/theoreticalMaterial.html
+++ b/#src/theoreticalMaterial.html
@@ -15,7 +15,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 
   </head>
-  <body id="body">
+  <body id="body" class="lock">
     @@include('blockNavAndLoader.html')
     </nav>
     <section class="theoretical">
