--- a/easy.html
+++ b/easy.html
@@ -14,7 +14,7 @@
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
   </head>
-  <body id="body">
+  <body id="body" class="lock">
     <div id="preloaderOverlay" class="preloader--overlay">
   <div class="preloader"></div>
 </div>
@@ -75,7 +75,7 @@
               $$x = \frac{3a + 1}{2a - 4}$$
               <p>$$Ответ: при \: a = 2 , x = \in \varnothing $$</p>
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
       </article>
@@ -138,7 +138,7 @@
               $$Ответ: если \: a = 1, то \: x \in R;$$
               $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
       </article>
@@ -185,7 +185,7 @@
               <p>Ответ:  уравнение умеет  2  корня   при</p>
               $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
             </p>
-            <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">истоник</a>
+            <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
           </div>
         </div>
       </article>
