--- a/hard.html
+++ b/hard.html
@@ -17,7 +17,7 @@
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
   </head>
-  <body id="body">
+  <body id="body" class="lock">
     <div id="preloaderOverlay" class="preloader--overlay">
   <div class="preloader"></div>
 </div>
@@ -134,6 +134,7 @@
               $$
               <p>Ответ: \( a \in  [1, 5; 3] \cup [6; + \infty] \)</p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=507587">источник</a>
           </div>
         </div>
       </article>
@@ -177,6 +178,7 @@
               <p>- 3 корня при \( \frac{6}{5} < a < \frac{5}{4} \) </p>
               <p>Ответ: \( \frac{6}{5} < a < \frac{5}{4} \))  </p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=501070" >источник</a>
           </div>
         </div>
       </article>
@@ -216,6 +218,7 @@
               $$ D = 3^2 - 4(3a - 4) = 25 - 12a = 0 \Leftrightarrow a = \frac{25}{12}$$
               <p>Ответ: \( a = 0, a = \frac{25}{12}\) </p>
             </p>
+            <a class="source" href="https://ege.sdamgia.ru/problem?id=485982" >источник</a>
           </div>
         </div>
       </article>
