--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>весь контент очень доступен</p>
       </div>
       <div class="opportunities__item">
-        <img src="img\opportunities\key.svg" alt="">
+        <img src="img\opportunities\key2.svg" alt="">
         <p>вы узнаете ключевые моменты в решении задач с параметром</p>
       </div>
       <div class="opportunities__item">
