--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
-        <a href="easy.html"><img src="img\difficulty\easy2.svg" alt=""></a>
+        <a href="easy.html"><img class="difficulty__item1" src="img\difficulty\easy.svg" alt=""></a>
         <h3>Лёгкие</h3>
         <p>Уравнения с параметром</p>
         <p>Неравенства с параметром</p>
@@ -58,7 +58,7 @@
         <a href="easy.html">Начать</a>
       </article>
       <article class="difficulty__item">
-        <a href="medium.html"><img src="img\difficulty\medium2.svg" alt=""></a>
+        <a href="medium.html"><img class="difficulty__item2" src="img\difficulty\medium.svg" alt=""></a>
         <h3>Средние</h3>
         <p>Расположение корней квадратного трехчлена</p>
         <p>Использование симметрий</p>
@@ -67,7 +67,7 @@
         <a href="medium.html">Начать</a>
       </article>
       <article class="difficulty__item">
-        <a href="hard.html"><img src="img\difficulty\hard2.svg" alt=""></a>
+        <a href="hard.html"><img class="difficulty__item3" src="img\difficulty\hard.svg" alt=""></a>
         <h3>Тяжёлые</h3>
         <p>Аналитическое решение уравнений, неравенств, систем</p>
         <p>Координаты (x, a)</p>
@@ -106,7 +106,7 @@
         <p>весь контент очень доступен</p>
       </div>
       <div class="opportunities__item">
-        <img src="img\opportunities\key3.svg" alt="">
+        <img src="img\opportunities\key.svg" alt="">
         <p>вы узнаете ключевые моменты в решении задач с параметром</p>
       </div>
       <div class="opportunities__item">
