--- a/#src/easy.html
+++ b/#src/easy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>легкие</title>
+    <title>базовые</title>
     <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <!-- ico -->
