--- a/#src/hard.html
+++ b/#src/hard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>сложные</title>
+    <title>профильные</title>
     <!-- <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
     <!-- ico -->
