--- a/#src/index.html
+++ b/#src/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <article class="difficulty__item">
         <a href="easy.html"><img class="difficulty__item1" src="img\difficulty\easy.svg" alt=""></a>
-        <h3>Лёгкие</h3>
+        <h3>Базовые</h3>
         <p>Уравнения с параметром</p>
         <p>Неравенства с параметром</p>
         <p>Системы с параметром </p>
@@ -37,7 +37,7 @@
       </article>
       <article class="difficulty__item">
         <a href="medium.html"><img class="difficulty__item2" src="img\difficulty\medium.svg" alt=""></a>
-        <h3>Средние</h3>
+        <h3>Повышенные</h3>
         <p>Расположение корней квадратного трехчлена</p>
         <p>Использование симметрий</p>
         <p>Использование монотонности, оценок</p>
@@ -46,7 +46,7 @@
       </article>
       <article class="difficulty__item">
         <a href="hard.html"><img class="difficulty__item3" src="img\difficulty\hard.svg" alt=""></a>
-        <h3>Тяжёлые</h3>
+        <h3>Профильные</h3>
         <p>Аналитическое решение уравнений, неравенств, систем</p>
         <p>Координаты (x, a)</p>
         <p>Уравнение окружности</p>
