TO DO live Data In Pie Chart 3

--- a/#src/index.html
+++ b/#src/index.html
@@ -100,7 +100,7 @@
   @@include('blockFooter.html')
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-    <script  >
+    <!-- <script  >
       let pueChart = document.querySelector('#pueChart').getContext('2d');
       pueChart.canvas.parentNode.style.height = '600px';
       pueChart.canvas.parentNode.style.width = '50%';
@@ -138,8 +138,11 @@
         }
 
       })
-    </script>
+    </script> -->
     <script  src="js\script.min.js"></script>
+    <script>
 
+
+  </script>
   </body>
 </html>
