--- a/#src/hard.html
+++ b/#src/hard.html
@@ -202,9 +202,8 @@
       </article>
 
     </section>
+      @@include('blockTest.html')
       @@include('blockFooter.html')
-
-
     <script src="js\script.min.js" ></script>
 
   </body>
