--- a/#src/medium.html
+++ b/#src/medium.html
@@ -225,6 +225,8 @@
             </div>
           </article>
     </section>
+    @@include('blockTest.html')
+
       @@include('blockFooter.html')
     <script src="js\script.min.js"></script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
