--- a/#src/index.html
+++ b/#src/index.html
@@ -12,17 +12,22 @@
     <link rel="manifest" href="ico\site.webmanifest">
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
- </head>
+  </head>
   <body id="body" class="lock">
     @@include('blockNavAndLoader.html')
   <main>
     <div class="container">
-      <header class="main__header">
+      <div class="main__title">
         <h1>Мы поможем вам изучить параметры</h1>
-        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами решения</p>
-      </header>
+        <p>Разбор 17 задачи, используя монотонность, графический метод или исследованием
+          дискриминанта </p>
+      </div>
     </div>
   </main>
+  <script  src="js\script.min.js"></script>
+</body>
+</html>
+
   <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
