temporary fix with formulas that are too broad

--- a/#src/easy.html
+++ b/#src/easy.html
@@ -41,7 +41,7 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>
+            <div class="answer__content">
               $$2a - 4 = \frac{3a + 1}{x}$$
 
               $$ 1) \: 2a - 4 = 0$$
@@ -52,7 +52,7 @@
               $$ 2) \: a  \neq 2$$
               $$x = \frac{3a + 1}{2a - 4}$$
               <p>$$Ответ: при \: a = 2 , x = \in \varnothing $$</p>
-            </p>
+            </div>
             <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
@@ -81,7 +81,7 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>
+            <div class="answer__content">
               <p>заметим, что в левой части уравнения формула сокращенного умножения</p>
               $$ (a - 1)^2 = a^2 + 2a -3 $$
               $$ 1) (a - 1)^2 = 0 $$
@@ -115,7 +115,7 @@
               $$ x =  \frac{(a - 1)}{(x + 3)}$$
               $$Ответ: если \: a = 1, то \: x \in R;$$
               $$ если \:a \neq 1, \: x =  \frac{(a - 1)}{(x + 3)} $$
-            </p>
+            </div>
             <a class="source" href="https://math100.ru/prof-ege_2022_17-1/">источник</a>
           </div>
         </div>
@@ -144,7 +144,7 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>
+            <div class="answer__content">
               <p>чтобы уравнение имело 2 различных корня, нужно чтобы D > 0. Ищем D</p>
               <!-- $$ чтобы  \: уравнение \: имело \: 2 \: различных \: корня, \: нужно \: чтобы \: D > 0. Ищем D$$ -->
               $$D = b^2 - 4ac $$
@@ -162,7 +162,7 @@
               $$
               <p>Ответ:  уравнение умеет  2  корня   при</p>
               $$   \:  a \in (-\infty ; -8 ) \cup ( 8; +\infty)  $$
-            </p>
+            </div>
             <a class="source" href="https://math100.ru/prof-ege_2022_17-2/">источник</a>
           </div>
         </div>
