--- a/#src/medium.html
+++ b/#src/medium.html
@@ -101,7 +101,7 @@
               <div class="answer__container">
                 <span class="checkbox__line answer__line--top-left"></span>
                 <span class="checkbox__line answer__line--top-right"></span>
-                <p>
+                <div class="answer__content">
                   $$  \textnormal {если}   \; x_0   \textnormal{является корнем исходного уравнения, то и}  $$
                   $$   \; -x_0 \;  \textnormal{является его корнем. Значит,}$$
                   $$ \textnormal{исходное уравнение имеет единственный корень,} $$
@@ -112,20 +112,30 @@
                   $$ | a - 3 | (| a - 3 | - 2)  = 0$$
                   $$ \textnormal{откуда либо |a − 3| = 0 ⇔ a = 3,}$$
                   $$ \textnormal{либо |a − 3| = 2 ⇔ a = 1, или a = 5.} $$
-                  $$ \textnormal{При a = 3 исходное уравнение принимает вид: }$$
-                  $$ x^2 = 2|x| \textnormal{Корнями этого уравнения являются числа}$$
-                  $$ −2; 0, 2, $$
-                  $$ \textnormal{то есть исходное уравнение имеет более одного корня. } $$
-                  $$ \textnormal{При a = 1 и при a = 5 уравнение принимает вид: } $$
+                  <p>При a = 3 исходное уравнение принимает вид: \( x^2 = 2|x| \) Корнями этого уравнения являются числа  −2; 0, 2, то есть исходное уравнение имеет более одного корня.</p>
+                  <!-- $$ \textnormal{При a = 3 исходное уравнение принимает вид: }$$
+                  $$ x^2 = 2|x| \textnormal{Корнями этого уравнения являются числа}$$ -->
+                  <!-- $$ −2; 0, 2, $$
+                  $$ \textnormal{то есть исходное уравнение имеет более одного корня. } $$ -->
+                  <p>При a = 1 и при a = 5 уравнение принимает вид: </p>
+                  <!-- $$ \textnormal{При a = 1 и при a = 5 уравнение принимает вид: } $$ -->
                   $$ x^2 + 4 = | x - 2 | + | x  + 2 | $$
-                  $$ \textnormal{При x < − 2 это уравнение сводится к уравнению:} $$
-                  $$ x^2 + 2x + 4 = 0 \textnormal{, которое не имеет корней}$$
-                  $$ \textnormal{При  −2 ≤ x ≤ 2 получаем уравнение} x^2 = 0 $$
-                  $$ \textnormal{имеющее 1 корень}  $$
-                  $$ \textnormal{При > 2 получаем уравнение } x^2 - 2x + 4 = 0 $$
-                  $$ \textnormal{которое не имеет корней. При a = 1 и при a = 5} $$
-                  $$\textnormal{исходное уравнение имеет единственный корень.} $$
-                </p>
+                  <p>При x < − 2 это уравнение сводится к уравнению:</p>
+                  <p> \( x^2 + 2x + 4 = 0 \), которое не имеет корней</p>
+                  <!-- $$ \textnormal{При x < − 2 это уравнение сводится к уравнению:} $$ -->
+                  <!-- $$ x^2 + 2x + 4 = 0 \textnormal{, которое не имеет корней}$$ -->
+                  <!-- <p>При  −2 ≤ x ≤ 2 получаем уравнение:</p> -->
+                  <p>При  −2 ≤ x ≤ 2 получаем уравнение</p>
+                  <p> \(  x^2 = 0 \), имеющее 1 корень</p>
+                  <!-- $$ \textnormal{При  −2 ≤ x ≤ 2 получаем уравнение} x^2 = 0 $$
+                  $$ \textnormal{имеющее 1 корень}  $$ -->
+                  <p>При > 2 получаем уравнение</p>
+                  <p> \( x^2 - 2x + 4 = 0 \), которое не имеет корней</p>
+                  <!-- $$ \textnormal{При > 2 получаем уравнение } x^2 - 2x + 4 = 0 $$ -->
+                  <!-- $$ \textnormal{которое не имеет корней. При a = 1 и при a = 5} $$ -->
+                  <p>При a = 1 и при a = 5 исходное уравнение имеет единственный корень.</p>
+                  <!-- $$\textnormal{исходное уравнение имеет единственный корень.} $$ -->
+                </div>
                 <a class="source" href="https://ege.sdamgia.ru/problem?id=501713" >источник </a>
               </div>
             </div>
@@ -154,7 +164,7 @@
               <div class="answer__container">
                 <span class="checkbox__line answer__line--top-left"></span>
                 <span class="checkbox__line answer__line--top-right"></span>
-                <p>
+                <div class="answer__content">
                   <p>Применим графическое решение. Запишем иначе:</p>
                   $$ | x^2 - 36 |= 8 | x - p | - 2p $$
                   <p>Слева имеем параболу, график которой, вследствие наличия модуля, располагается только в верхней полуплоскости, вся его «подводная» часть отражена вверх:</p>
@@ -191,7 +201,7 @@
                   $$ 36 - x^2 = 8x - 10p $$
                   $$ x^2 + 8x - 10p - 36 = 0 $$
                   <p>Если общая точка одна, то дискриминант будет равен 0:</p>
-                  $$ D = b^2 - 4ac = 64 - 4(-10p - 36) = 0 $$
+                  <p>$$ D = b^2 - 4ac = 64 - 4(-10p - 36) = 0 $$</p>
                   $$ 40p = -208 $$
                   $$ p = -5,2 $$
                   <p>Сама эта точка нас еще не устраивает, но значения параметра, большие -5,2, уже подходят нам. Выясним, до какого момента будем иметь 4 пересечения:</p>
@@ -219,7 +229,7 @@
                   <p>Полученное значение параметра нас уже не устраивает: при таком p снова имеем три решения.</p>
                   <p>Вот и второй интервал: \( p \in (9 ;8 \frac{2}{3}) \) </p>
                   <p>Ответ: \( p \in (-5,2 ;4,8)  \cup  (9 ;8 \frac{2}{3}) \) </p>
-                </p>
+                </div>
                 <a class="source" href="https://easy-physic.ru/zadacha-s-parametrom-i-modulem/" >источник </a>
               </div>
             </div>
@@ -228,18 +238,16 @@
     @@include('blockTest.html')
     @@include('blockFooter.html')
     <script type="text/javascript">
-    MathJax.Hub.Config({
-  CommonHTML: {
-    linebreaks: {
-      automatic: true
-    }
-  }
-});
+      MathJax.Hub.Config({
+          CommonHTML: {
+            linebreaks: {
+              automatic: true
+            }
+          }
+        });
     </script>
-
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <script src="js\script.min.js"></script>
-
   </body>
 </html>
