--- a/medium.html
+++ b/medium.html
@@ -63,18 +63,18 @@
           <div class="answer__container">
             <span class="checkbox__line answer__line--top-left"></span>
             <span class="checkbox__line answer__line--top-right"></span>
-            <p>
+            <div class="answer__content">
               <p>Данная функция определена на всей числовой прямой и при
                 любом значении параметра а является кусочно-линейной. Точки</p>
                 $$ -1, -\frac{ 2 } { a }, -\frac{ 5 } { a } $$
                 <p>разбивают числовую прямую на промежутки, на каждом из которых функция
                   является линейной. Рассмотрим случай a < 0. Тогда</p>
                   $$ -1 < -\frac{ 2 } { a } < -\frac{ 5 } { a } $$
-                  <p>. При раскрытие модулей получаем:</p>
-                  $$ если  \ x < -1, то \ y = 9 + 7x - 3ax - 6 + ax + 5 - x  - 1 = (6 - 2a)x + 7$$
-                  $$ если  \ -1 \leq x < -\frac{2}{a} , то \ y = 9 + 7x - 3ax - 6 + ax + 5 + x  + 1 = (8 - 2a)x + 9$$
-                  $$ если  \ -\frac{2}{a} \leq x < -\frac{5}{a} , то \ y = 9 + 7x + 3ax + 6 + ax + 5 + x  + 1 = (8 - 4a)x + 21$$
-                  $$ если  \  x \geq  -\frac{5}{a} , то \ y = 9 + 7x + 3ax + 6 - ax - 5 + x  + 1 = (8 + 2a)x + 11$$
+                  <p>При раскрытие модулей получаем:</p>
+                  <p> если  \( x < -1 \) , то \( y = 9 + 7x - 3ax - 6 + ax + 5 - x  - 1 = (6 - 2a)x + 7 \) </p>
+                  <p> если  \( -1 \leq x < -\frac{2}{a} \), то \( y = 9 + 7x - 3ax - 6 + ax + 5 + x  + 1 = (8 - 2a)x + 9 \)</p>
+                  <p> если  \( -\frac{2}{a} \leq x < -\frac{5}{a} \), то \( y = 9 + 7x + 3ax + 6 + ax + 5 + x  + 1 = (8 - 4a)x + 21 \)</p>
+                  <p> если  \(  x \geq  -\frac{5}{a} \), то \( y = 9 + 7x + 3ax + 6 - ax - 5 + x  + 1 = (8 + 2a)x + 11 \)</p>
                   <p>Для того чтобы функция не убывала, необходимо и достаточно, чтобы все полученные значения угловых коэффициентов прямых были неотрицательными. Следовательно,</p>
                   $$
                   \begin{equation*}
@@ -94,7 +94,7 @@
                   <p>получаем:</p>
                   $$ -2 \leq a < 0 $$
                   <p>Отсюда получаем наименьшее значение параметра, равное -2. Так как по условию задачи нужно найти наименьшее значение а, то случай а > 0 рассматривать не нужно.</p>
-                </p>
+                </div>
                 <a class="source" href="https://math100.ru/prof-ege_2022_17-6/" >источник </a>
               </div>
             </div>
@@ -123,7 +123,7 @@
               <div class="answer__container">
                 <span class="checkbox__line answer__line--top-left"></span>
                 <span class="checkbox__line answer__line--top-right"></span>
-                <p>
+                <div class="answer__content">
                   $$  \textnormal {если}   \; x_0   \textnormal{является корнем исходного уравнения, то и}  $$
                   $$   \; -x_0 \;  \textnormal{является его корнем. Значит,}$$
                   $$ \textnormal{исходное уравнение имеет единственный корень,} $$
@@ -134,20 +134,30 @@
                   $$ | a - 3 | (| a - 3 | - 2)  = 0$$
                   $$ \textnormal{откуда либо |a − 3| = 0 ⇔ a = 3,}$$
                   $$ \textnormal{либо |a − 3| = 2 ⇔ a = 1, или a = 5.} $$
-                  $$ \textnormal{При a = 3 исходное уравнение принимает вид: }$$
-                  $$ x^2 = 2|x| \textnormal{Корнями этого уравнения являются числа}$$
-                  $$ −2; 0, 2, $$
-                  $$ \textnormal{то есть исходное уравнение имеет более одного корня. } $$
-                  $$ \textnormal{При a = 1 и при a = 5 уравнение принимает вид: } $$
+                  <p>При a = 3 исходное уравнение принимает вид: \( x^2 = 2|x| \) Корнями этого уравнения являются числа  −2; 0, 2, то есть исходное уравнение имеет более одного корня.</p>
+                  <!-- $$ \textnormal{При a = 3 исходное уравнение принимает вид: }$$
+                  $$ x^2 = 2|x| \textnormal{Корнями этого уравнения являются числа}$$ -->
+                  <!-- $$ −2; 0, 2, $$
+                  $$ \textnormal{то есть исходное уравнение имеет более одного корня. } $$ -->
+                  <p>При a = 1 и при a = 5 уравнение принимает вид: </p>
+                  <!-- $$ \textnormal{При a = 1 и при a = 5 уравнение принимает вид: } $$ -->
                   $$ x^2 + 4 = | x - 2 | + | x  + 2 | $$
-                  $$ \textnormal{При x < − 2 это уравнение сводится к уравнению:} $$
-                  $$ x^2 + 2x + 4 = 0 \textnormal{, которое не имеет корней}$$
-                  $$ \textnormal{При  −2 ≤ x ≤ 2 получаем уравнение} x^2 = 0 $$
-                  $$ \textnormal{имеющее 1 корень}  $$
-                  $$ \textnormal{При > 2 получаем уравнение } x^2 - 2x + 4 = 0 $$
-                  $$ \textnormal{которое не имеет корней. При a = 1 и при a = 5} $$
-                  $$\textnormal{исходное уравнение имеет единственный корень.} $$
-                </p>
+                  <p>При x < − 2 это уравнение сводится к уравнению:</p>
+                  <p> \( x^2 + 2x + 4 = 0 \), которое не имеет корней</p>
+                  <!-- $$ \textnormal{При x < − 2 это уравнение сводится к уравнению:} $$ -->
+                  <!-- $$ x^2 + 2x + 4 = 0 \textnormal{, которое не имеет корней}$$ -->
+                  <!-- <p>При  −2 ≤ x ≤ 2 получаем уравнение:</p> -->
+                  <p>При  −2 ≤ x ≤ 2 получаем уравнение</p>
+                  <p> \(  x^2 = 0 \), имеющее 1 корень</p>
+                  <!-- $$ \textnormal{При  −2 ≤ x ≤ 2 получаем уравнение} x^2 = 0 $$
+                  $$ \textnormal{имеющее 1 корень}  $$ -->
+                  <p>При > 2 получаем уравнение</p>
+                  <p> \( x^2 - 2x + 4 = 0 \), которое не имеет корней</p>
+                  <!-- $$ \textnormal{При > 2 получаем уравнение } x^2 - 2x + 4 = 0 $$ -->
+                  <!-- $$ \textnormal{которое не имеет корней. При a = 1 и при a = 5} $$ -->
+                  <p>При a = 1 и при a = 5 исходное уравнение имеет единственный корень.</p>
+                  <!-- $$\textnormal{исходное уравнение имеет единственный корень.} $$ -->
+                </div>
                 <a class="source" href="https://ege.sdamgia.ru/problem?id=501713" >источник </a>
               </div>
             </div>
@@ -176,7 +186,7 @@
               <div class="answer__container">
                 <span class="checkbox__line answer__line--top-left"></span>
                 <span class="checkbox__line answer__line--top-right"></span>
-                <p>
+                <div class="answer__content">
                   <p>Применим графическое решение. Запишем иначе:</p>
                   $$ | x^2 - 36 |= 8 | x - p | - 2p $$
                   <p>Слева имеем параболу, график которой, вследствие наличия модуля, располагается только в верхней полуплоскости, вся его «подводная» часть отражена вверх:</p>
@@ -213,7 +223,7 @@
                   $$ 36 - x^2 = 8x - 10p $$
                   $$ x^2 + 8x - 10p - 36 = 0 $$
                   <p>Если общая точка одна, то дискриминант будет равен 0:</p>
-                  $$ D = b^2 - 4ac = 64 - 4(-10p - 36) = 0 $$
+                  <p>$$ D = b^2 - 4ac = 64 - 4(-10p - 36) = 0 $$</p>
                   $$ 40p = -208 $$
                   $$ p = -5,2 $$
                   <p>Сама эта точка нас еще не устраивает, но значения параметра, большие -5,2, уже подходят нам. Выясним, до какого момента будем иметь 4 пересечения:</p>
@@ -241,7 +251,7 @@
                   <p>Полученное значение параметра нас уже не устраивает: при таком p снова имеем три решения.</p>
                   <p>Вот и второй интервал: \( p \in (9 ;8 \frac{2}{3}) \) </p>
                   <p>Ответ: \( p \in (-5,2 ;4,8)  \cup  (9 ;8 \frac{2}{3}) \) </p>
-                </p>
+                </div>
                 <a class="source" href="https://easy-physic.ru/zadacha-s-parametrom-i-modulem/" >источник </a>
               </div>
             </div>
@@ -249,12 +259,11 @@
     </section>
     <section class="test">
   <div class="container">
-    <h3>Уже подготовились? Пройдите по теме <a class="source" href="https://forms.gle/1Rdxr952r9zHCxWH7">тест</a></h3>
+    <p>Уже подготовились? Пройдите по теме <a class="source" href="https://forms.gle/1Rdxr952r9zHCxWH7">тест</a></p>
   </div>
 </section>
 
-
-      <footer>
+    <footer>
   <div class="footer__item">
     <h4>Разработка и дизайн сайта:</h4>
     <p>Цуканников Кирилл <a href="https://github.com/topi768"><i class="fab fa-github"></i></a><a href="https://vk.com/id457776760"><i class="fab fa-vk"></i></a></p>
@@ -264,8 +273,17 @@
   </div>
 </footer>
 
-    <script src="js\script.min.js"></script>
+    <script type="text/javascript">
+      MathJax.Hub.Config({
+          CommonHTML: {
+            linebreaks: {
+              automatic: true
+            }
+          }
+        });
+    </script>
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    <script src="js\script.min.js"></script>
   </body>
 </html>
