--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Главная</title>
-    <!-- <link rel="stylesheet" href="libs/font-awesome/fontawesome.min.css"> -->
     <link rel="stylesheet" href="css/style.min.css">
     <!-- ico -->
     <link rel="apple-touch-icon" sizes="180x180" href="ico\apple-touch-icon.png">
@@ -13,7 +12,7 @@
     <link rel="manifest" href="ico\site.webmanifest">
     <!-- fontawesome -->
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
- </head>
+  </head>
   <body id="body" class="lock">
     <div id="preloaderOverlay" class="preloader--overlay">
   <div class="preloader"></div>
@@ -40,12 +39,17 @@
 
   <main>
     <div class="container">
-      <header class="main__header">
+      <div class="main__title">
         <h1>Мы поможем вам изучить параметры</h1>
-        <p>Разбор задач с параметром, тригонометрическими функциями, с системами и по возможности с несколькими вариантами решения</p>
-      </header>
+        <p>Разбор 17 задачи, используя монотонность, графический метод или исследованием
+          дискриминанта </p>
+      </div>
     </div>
   </main>
+  <script  src="js\script.min.js"></script>
+</body>
+</html>
+
   <section class="difficulty">
     <div class="container">
       <article class="difficulty__item">
@@ -130,8 +134,7 @@
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <!-- <script  >
+    <script  >
       let pueChart = document.querySelector('#pueChart').getContext('2d');
       pueChart.canvas.parentNode.style.height = '600px';
       pueChart.canvas.parentNode.style.width = '50%';
@@ -141,7 +144,7 @@
           labels: ['да, я собираюсь', 'не буду  их решать','не сдаю профиль'] ,
           datasets: [{
             data: [
-              1,
+              8,
               1,
               1
               // content[key][0][0],
@@ -169,11 +172,7 @@
         }
 
       })
-    </script> -->
+    </script>
     <script  src="js\script.min.js"></script>
-    <script>
-
-
-  </script>
   </body>
 </html>
